# CS284-final

./: CMakeLists.txt  README.md
docs/: index.html  milestone.html  proposal.html  report.html
gpu/: Constants.h  Grid.cu  Grid.h  Matrix2D.cpp  Matrix2D.h  Particle.h  Scene.cpp  Scene.h  Simulator.cpp  Simulator.h  Snow.h  Vector2D.h  main.cu  utilis.h
gpu-kernel/: Grid.cu  Grid.h  Simulator.cu  Simulator.h
gpu-kernel-merge/: Constants.h  Grid.cu  Grid.h  Scene.cu  Scene.h  Simulator.cu  Simulator.h  Snow.h  main.cu  out
gpu-thrust/: Constants.h  Grid.cu  Grid.h  Matrix2D.cu  Matrix2D.h  Particle.h  Scene.cu  Simulator.cu  Simulator.h  Snow.cu  Vector2D.h  main.cu
src/: Constants.h  Grid.cpp  Grid.h  Matrix2D.cpp  Matrix2D.h  Particle.cpp  Particle.h  Scene.cpp  Scene.h  Simulator.cpp  Simulator.h  Snow.cpp  Snow.h  Vector2D.h  main.cpp  utilis.h
